--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>test</title>
-    <link rel="stylesheet" type="text/css" href="//bootswatch.com/4/lumen/bootstrap.min.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>test</title><link rel=stylesheet type=text/css href=//bootswatch.com/4/lumen/bootstrap.min.css><link href=/test-uol/static/css/app.9e790d91da93923e7dfe738984225ab7.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/test-uol/static/js/manifest.409560f3d75915ea4630.js></script><script type=text/javascript src=/test-uol/static/js/vendor.06c712599fe7162c12f1.js></script><script type=text/javascript src=/test-uol/static/js/app.2504b174690b36e65b6c.js></script></body></html>
